config redis & config nodemailer

--- a/.env
+++ b/.env
@@ -2,4 +2,13 @@ SALT=10
 SECRET='MYAPP'
 PORT = 9000
 
+#DATABASE
 DATABASE_URL=postgres://postgres:0925@@localhost:5432/redis-crud
+
+#NodeMariler
+SMTP_USER=muhammadabdushukurov39@gmail.com
+SMTP_PASS=mkfphilhlszhgihz
+
+#REDIS
+REDIS_PORT = 6379
+REDIS_HOST = localhost
