--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"inversify": "^6.0.1",
+		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^6.9.15",
+		"redis": "^4.7.0",
 		"reflect-metadata": "^0.1.13",
 		"tslog": "^3.2.2"
 	},
@@ -34,6 +37,7 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^9.0.7",
+		"@types/nodemailer": "^6.4.16",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
 		"eslint": "^8.0.1",
